name:                simulate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/simulate#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Simulation
                     , Physics3D
                     , RealWorld3D
                     , Vector3D
                     , AnimationCollection
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-rasterific
                     , diagrams-svg
                     , diagrams-lib
                     , linear
                     , deepseq
                     , split
                     , mtl
                     , parallel
  default-language:    Haskell2010

executable simulate-exe
  hs-source-dirs:      app
  main-is:             examples3D.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , simulate
                     , diagrams
                     , diagrams-rasterific
                     , diagrams-svg
                     , diagrams-lib
                     , linear
                     , deepseq
                     , split
                     , mtl
                     , parallel
  default-language:    Haskell2010

test-suite simulate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simulate
                     , diagrams
                     , diagrams-rasterific
                     , diagrams-svg
                     , diagrams-lib
                     , linear
                     , deepseq
                     , split
                     , mtl
                     , parallel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simulate
